--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@mertasan/tailwindcss-variables": "github:mertasan/tailwindcss-variables",
+    "@mui/material": "^5.16.4",
     "next": "14.2.5",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "react": "^18",
