--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mertasan/tailwindcss-variables": "github:mertasan/tailwindcss-variables",
+    "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.4",
     "next": "14.2.5",
     "prettier-plugin-tailwindcss": "^0.6.5",
