--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.0",
     "@mertasan/tailwindcss-variables": "github:mertasan/tailwindcss-variables",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.4",
+    "form": "^0.2.4",
+    "hook": "^0.0.5",
     "next": "14.2.5",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
-    "tailwind-merge": "^2.4.0"
+    "react-hook-form": "^7.52.1",
+    "tailwind-merge": "^2.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
