--- a/package.json
+++ b/package.json
@@ -15,9 +15,15 @@
     "@mertasan/tailwindcss-variables": "github:mertasan/tailwindcss-variables",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.4",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.17.0",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "form": "^0.2.4",
     "hook": "^0.0.5",
+    "jose": "^5.6.3",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "react": "^18.3.1",
     "react-dom": "^18",
@@ -32,6 +38,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "prisma": "^5.17.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
