--- a/package.json
+++ b/package.json
@@ -17,21 +17,25 @@
     "@mui/material": "^5.16.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.17.0",
+    "cookie": "^0.6.0",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "form": "^0.2.4",
     "hook": "^0.0.5",
     "jose": "^5.6.3",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
     "tailwind-merge": "^2.4.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
