--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
     "tailwind-merge": "^2.4.0",
     "zod": "^3.23.8"
   },
